--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -32,7 +32,8 @@
         opacity: .9;
         top: 7rem;
         right: 6.5rem;
-        background-image: radial-gradient(#6d3a81,#33183d,);
+        background-image: radial-gradient(
+        #cf489a,#33183d,);
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
