--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,7 +8,7 @@ $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
 $color-tertiary-light: #582a69;
-$color-tertiary-dark: #562e64;
+$color-tertiary-dark: #bea690;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
