--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,7 +28,7 @@ html {
 body {
     box-sizing: border-box;
     // background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
-    background-color: #f8f2f5;
+    background-color: #f4f0e9;
     background-size: 100%;
     background-attachment: fixed;
     @include respond(tab-port) { 
