--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,14 +1,15 @@
 .footer {
     padding: 10rem 0;
     width: 100%;
-    background-color: #43274d;
+    background-color: 
+    #8b5a42;
     clip-path: polygon(94% 3%, 100% 100%, 82% 100%, 0 100%, 0 0);
     position: relative;
     font-size: 1.4rem;
     color: $color-grey-light-1;
     
     @include respond(phone){
-        background-color: #43274d;
+        background-color: #8b5a42;
         clip-path: polygon(94% 3%, 100% 100%, 82% 100%, 0 100%, 0 0);
     }
     @include respond(tab-port) {
