--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .heading-primary {
-    color: rgb(22, 73, 212);
+    color: #be9e51;
     text-transform: uppercase;
 
     backface-visibility: hidden;
