--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,7 +7,7 @@
 }
 *{
     transition: all .6s !important;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Merienda', cursive !important;
 }
 
 html {
