--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // COLORS
 $color-primary: #3e2149;
 $color-primary-light: #512f5e;
@@ -7,8 +6,8 @@ $color-primary-dark: #2c1036;
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
-$color-tertiary-light: #582a69;
-$color-tertiary-dark: #bea690;
+$color-tertiary-light: #e884b0;
+$color-tertiary-dark: #cf489a;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
