--- a/sass/_feature-box.scss
+++ b/sass/_feature-box.scss
@@ -2,14 +2,16 @@
 .feature-box {
     background-color: rgba($color-white, .8);
     font-size: 1.5rem;
-    width: 27rem;
-    height: 20rem;
-    padding: 2.5rem;
+    width: 100%;
+    height: 10rem;
     text-align: center;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .3s;
-
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     @include respond(tab-port) {
         padding: 2rem;
     }
@@ -20,7 +22,6 @@
         
         display: inline-block;
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-        -webkit-background-clip: text;
         color: transparent;
 
         @include respond(tab-port) {
