--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -18,7 +18,7 @@ body {
 
     &--main {
         display: block;
-        font-size: 5vh;
+        font-size: 4.5rem;
         font-weight: 600;
         letter-spacing: 1.5rem;
         margin-bottom:2rem ;
@@ -92,7 +92,7 @@ body {
 .heading-tertiary {
     font-size: $default-font-size;
     font-weight:bold;
-
+    font-family:'Roboto', sans-serif !important;
     text-transform: uppercase;
 }
 .paragraph {
