--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,6 @@
 .header{
     display: flex;
-    height: 75rem !important;
+    height: 78rem !important;
     background-image: linear-gradient(
         to right bottom,
         rgba(
@@ -43,10 +43,10 @@
         #caa290;
         overflow: hidden;
         border-radius: 50%;
+
         img{
             width: 90%;
             height: auto;
-
             // border-radius:50% ;
 
             @include respond (phone){
@@ -138,10 +138,14 @@
         align-items: center;
         top: 0% !important;
         left: 4%;
-        justify-content: flex-start;
+        justify-content: center;
         margin-top:2rem ;
         padding-top:1rem ;
         padding-left:2rem ;
+
+        img{
+            margin: 0 20px;
+        }
 
         @include respond (phone){
             width: 95%;
@@ -261,7 +265,7 @@
     }
     .logo-7 {
         // filter:  brightness(0) invert(1);
-        width: 8%;
+        width: 11%;
         height:auto;
         margin-right:2rem ;
 
@@ -290,7 +294,7 @@
     }
     .logo-5 {
         // filter:  brightness(0) invert(1);
-        width: 15%;
+        width: 19%;
         height:auto;
 
         @include respond (tab-land){
