--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -30,12 +30,14 @@
         float: left;
         z-index: 9999;
         box-shadow: .1rem 1.5rem 4rem rgba(0, 0, 0, 0.596);
-
+        display: flex;
+        align-items: center;
+        justify-content: center;
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
         overflow: hidden;
         border-radius: 50%;
-
+        padding-top: 5px;
         @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
             // For the following polygon to work, the element must have set width and height + a float
             -webkit-shape-outside: circle(50% at 50% 50%);
@@ -53,7 +55,7 @@
     &__img {
         
         height: 100%;
-        transform: translateX(0rem) scale(1.4);
+        transform:scale(1.1);
         backface-visibility: hidden;
         transition: all .5s;
        
