--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,12 +7,14 @@
 }
 *{
     transition: all .6s !important;
-    font-family: 'Merienda', cursive !important;
+    font-family:  'Roboto', sans-serif !important;
+    // font-weight: bold !important;
 }
 
 html {
     scroll-behavior: smooth;
     font-size: 62.5%; //1rem = 10px 10px/16px = 62.5%
+    font-weight: 700 !important;
 
     @include respond(tab-land) { //width < 1200
         font-size: 56.25%; //1rem = 9px, 9/16 = 56.25%
