--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -103,7 +103,9 @@
     width:100% ;
     height: 37rem;
     transform: skewX(0deg) !important;
-  
+    @include respond(phone){
+      height: 15rem !important;
+    }
   }
 }
 
