--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -2,7 +2,7 @@
 
     //Functionality of the card
 
-    perspective: 150rem ;
+    perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
     // Have to add a height here as well becuase parent loses all of its 
@@ -13,7 +13,7 @@
     &__side {
         background-color: orangered;
         height: 52rem;
-        transition: all .8s ease;   
+        transition: all .8s ease;
         position: absolute;
         top: 0;
         left: 0;
@@ -23,54 +23,67 @@
         border-radius: 3px;
         overflow: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-        
+
         &--front {
             background-color: $color-white;
         }
+
         &--back {
-            transform: rotateY(180deg) ;
+            transform: rotateY(180deg);
 
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+
             &-2 {
                 background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
             }
+
             &-3 {
                 background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
             }
         }
     }
+
     &:hover &__side--front {
         transform: rotateY(-200deg);
     }
+
     &:hover &__side--back {
-        transform: rotateY(0) ;
+        transform: rotateY(0);
     }
 
     // FRONT SIDE STYLING
     &__picture {
-        background-size: cover;
-        height: 23rem;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 30rem;
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
-        
+
         &--1 {
-            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
-            url(../img/nat-5.jpg);
+            background-image: linear-gradient(to right bottom, #e0a26836,
+                    #d6c0da3b),
+                url(../img/mukafat1.png);
         }
+
         &--2 {
-            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
-            url(../img/nat-6.jpg);
+            background-image: linear-gradient(to right bottom, #e0a26836,
+                    #d6c0da3b),
+                url(../img/mukafat2.png);
         }
+
         &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
-            url(../img/nat-7.jpg);
+            background-image: linear-gradient(to right bottom, #e0a26836,
+                    #d6c0da3b),
+                url(../img/mukafat3.png);
+            ;
         }
     }
+
     &__heading {
         font-size: 2.8rem;
         font-weight: 300;
@@ -78,41 +91,46 @@
         text-align: right;
         color: $color-white;
         position: absolute;
-        top: 12rem;
-        right: 2rem;
+        top: 17rem;
+        right: 0;
         width: 75%;
     }
+
     &__heading-span {
         padding: 1rem 1.5rem;
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
 
         &--1 {
-            background-image: linear-gradient(to right bottom, 
-            rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
         }
+
         &--2 {
-            background-image: linear-gradient(to right bottom, 
-            rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
         }
+
         &--3 {
-            background-image: linear-gradient(to right bottom, 
-            rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
+            background-image: linear-gradient(to right bottom,
+                    rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
         }
     }
 
     &__details {
         padding: 3rem;
 
-        ul { 
+        ul {
             list-style: none;
             width: 80%;
             margin: 0 auto;
 
             li {
                 text-align: center;
-                font-size: 1.5rem;
+                font-size: 2rem;
                 padding: 1rem;
+                font-weight: bold;
+
                 &:not(:last-child) {
                     border-bottom: 1px solid $color-grey-light-2;
                 }
@@ -129,15 +147,18 @@
         width: 90%;
         text-align: center;
     }
+
     &__price-box {
         text-align: center;
         color: $color-white;
         margin-bottom: 8rem;
     }
+
     &__price-only {
         font-size: 1.4rem;
         text-transform: uppercase;
     }
+
     &__price-value {
         font-size: 6rem;
         font-weight: 100;
@@ -145,9 +166,9 @@
 
     // @include respond(tab-port) 
     @media only screen and (max-width: 56.25em),
-            //This media query is for displays that do not support hover (touch screens)
-            only screen and (hover: none) {
-       
+    //This media query is for displays that do not support hover (touch screens)
+    only screen and (hover: none) {
+
         height: auto;
         border-radius: 3px;
         background-color: $color-white;
@@ -157,18 +178,22 @@
             height: auto;
             position: relative;
             box-shadow: none;
-            
+
             &--back {
                 transform: rotateY(0) !important;
                 clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
             }
         }
+
         &:hover &__side--front {
-            transform: rotateY(0) ;
+            transform: rotateY(0);
         }
+
         .card__details {
             padding: 1rem 3rem;
+        
         }
+
         // BACK SIDE STYLING
         &__cta {
             position: relative;
@@ -176,13 +201,21 @@
             left: 0;
             transform: translate(0);
             width: 100%;
-            padding: 7rem 4rem 4rem 4rem ;
+            padding: 7rem 4rem 4rem 4rem;
         }
+
         &__price-box {
             margin-bottom: 3rem;
         }
+
         &__price-value {
             font-size: 4rem;
         }
     }
+}
+
+
+.heading-third{
+    font-size: 20px;
+    text-transform: none;
 }
